--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-player": "^2.12.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
+    "react-simple-image-slider": "^2.4.1",
+    "react-slick": "^0.29.0",
+    "react-thumbnail-generator": "^2.8.0",
     "router": "^1.3.8",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
